--- a/src/components/style.css
+++ b/src/components/style.css
@@ -34,3 +34,115 @@ img{
   height:70px;
   width:70px;
 }
+#index ul {
+  list-style-type: none; /*箇条書きのポッチを消す*/
+  
+}
+
+#index ul li { 
+  display: inline-block;/*inline-blockにします*/
+  width: 48%;
+  padding: 1%;/*余白も指定できる*/
+  margin: 1%;/*余白も指定できる*/
+  vertical-align: top;/*縦の表示位置も指定できる*/
+  background-color:white;
+  border-radius: 3%
+}
+#tab ul .WEB {
+  background-color: #F1A7A6;
+  border-radius: 50%
+}
+#tab ul .GAME {
+  background-color: #6FD7EE;
+  border-radius: 50%
+}
+#tab ul .iPhone {
+  background-color: #FBD9C2;
+  border-radius: 50%
+}
+#tab ul .WEB.Expert {
+  background-color: #FFFFD6;
+  border-radius: 50%
+}
+
+#index .answer{
+
+  text-align: center;
+}
+#index .notanswer{
+  text-align: center;
+}
+
+.post{
+  padding: 1%;
+ 
+}
+
+
+
+#tab ul {
+  list-style: none;
+  display: flex;
+}
+ 
+#tab ul li {
+  width: 25%;
+  text-align: center;
+  background-color: #333;
+  height: 50px;
+  line-height: 50px;
+  margin-right: 2px;
+  border-radius: 50%;
+}
+ 
+#tab ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  padding: 20px;
+  
+}
+.WEB .Expert {
+  background-color: #FFFFD6;
+  border-radius: 50%
+}
+.WEB {
+  background-color: #F1A7A6;
+  border-radius: 3%
+}
+.GAME {
+  background-color: #6FD7EE;
+  border-radius: 3%
+}
+.iPhone {
+  background-color: #FBD9C2;
+  border-radius: 3%
+}
+ .WEB.Expert {
+  background-color: #FFFFD6;
+  border-radius: 3%
+}
+.postbutton{
+  position: fixed;
+  bottom: 3%;
+  right: 3%;
+ 
+}
+.search{
+  background-color: #fff;
+  border-radius: 20px 20px 20px 20px/20px 20px 20px 20px;
+    right: -36%;
+    width: 20%;
+    height:60%;
+    margin: 0% 1% 1% 0%;
+    position: relative;
+  position: relative;
+  
+}
+input#textsearch{
+  right: -6%;
+
+}
+li.gray.lighten-3{
+  height:60px;
+}
