--- a/src/components/style.css
+++ b/src/components/style.css
@@ -132,7 +132,7 @@ img{
   background-color: #fff;
   border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;
     right: -36%;
-    width: 20%;
+    width: 30%;
     height:60%;
     margin: 0% 1% 1% 0%;
     position: relative;
@@ -141,8 +141,11 @@ img{
 }
 input#textsearch{
   right: -6%;
-
+  width: 50%;
 }
 li.gray.lighten-3{
   height:60px;
+}
+.search element.style{
+  width: 29vw;
 }
