--- a/src/components/style.css
+++ b/src/components/style.css
@@ -31,8 +31,8 @@ form, input, div ,button{
 }
 
 img{
-  height:70px;
-  width:70px;
+  height:200px;
+  width:200px;
 }
 #index ul {
   list-style-type: none; /*箇条書きのポッチを消す*/
@@ -50,7 +50,7 @@ img{
 }
 #tab ul .WEB {
   background-color: #F1A7A6;
-  border-radius: 50%
+  border-radius: 50%;
 }
 #tab ul .GAME {
   background-color: #6FD7EE;
@@ -104,7 +104,7 @@ img{
 }
 .WEB .Expert {
   background-color: #FFFFD6;
-  border-radius: 50%
+  border-radius: 3%
 }
 .WEB {
   background-color: #F1A7A6;
