--- a/src/components/style.css
+++ b/src/components/style.css
@@ -48,6 +48,31 @@ img{
   background-color:white;
   border-radius: 3%
 }
+
+#tab ul {
+  list-style: none;
+  display: flex;
+}
+ 
+#tab ul li {
+  width: 25%;
+  text-align: center;
+ 
+  height: 50px;
+  line-height: 50px;
+  margin-right: 2px;
+  border-radius: 50%;
+}
+ 
+#tab ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  padding: 20px;
+  
+}
+
+
 #tab ul .WEB {
   background-color: #F1A7A6;
   border-radius: 50%;
@@ -78,30 +103,69 @@ img{
  
 }
 
+#tab ul .Like {
+  background-color: #F1A7A6;
+  
+  padding: 0%;
+  margin: 0%;
+  border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;
+}
 
-
-#tab ul {
+#tab ul .Post {
+  background-color: #6FD7EE;
+ 
+  padding: 0%;
+  margin: 0%;
+  border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;
+}
+.mypage ul {
   list-style: none;
   display: flex;
 }
- 
-#tab ul li {
-  width: 25%;
-  text-align: center;
-  background-color: #333;
-  height: 50px;
+.mypage ul li {
+
   line-height: 50px;
   margin-right: 2px;
-  border-radius: 50%;
+
 }
+
+.mypage ul li.aaa{
+  width: 25%;
  
-#tab ul li a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: bold;
-  padding: 20px;
   
+  height: 50px;
+
 }
+.mypage ul li.post{
+  width: 75%;
+  
+  background-color:#fff;
+ 
+  line-height: 50px;
+  margin-right: 2px;
+  border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;
+}
+
+
+.mypost{
+ 
+  
+  background-color: #F1A7A6;
+  background-color:#6FD7EE;
+  line-height: 50px;
+  /* margin-right: 2px; */
+  border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;
+}
+.likepost{
+ 
+  background-color: #F1A7A6;
+  line-height: 50px;
+  /* margin-right: 2px; */
+  border-radius: 10px 10px 10px 10px/10px 10px 10px 10px;
+}
+
+
+
 .WEB .Expert {
   background-color: #FFFFD6;
   border-radius: 3%
